Add Megasync role

--- a/workstation.yml
+++ b/workstation.yml
@@ -13,3 +13,5 @@
       vars:
         install_path: /opt/firefox-developer
         channel: devedition-latest
+    - include_role:
+        name: megasync
