Add php-imap and php-mcrypt extensions to webserver role

--- a/roles/webserver/tasks/main.yml
+++ b/roles/webserver/tasks/main.yml
@@ -45,7 +45,9 @@
       - ImageMagick
       - php
       - php-gd
+      - php-imap
       - php-intl
+      - php-mcrypt
       - php-mysqlnd
       - php-pecl-imagick
       - php-pecl-xdebug
