[docker] Add docker-compose

--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -27,7 +27,9 @@
 
 - name: Install Docker
   dnf:
-    name: docker-ce
+    name:
+      - docker-ce
+      - docker-compose
     state: present
 
 - name: Start and enable Docker
