--- a/roles/development/tasks/main.yml
+++ b/roles/development/tasks/main.yml
@@ -18,34 +18,14 @@
       - git-gui
       - gitg
 
-- name: Configure Pycharm repo
-  get_url:
-    url: "https://copr.fedorainfracloud.org/coprs/phracek/PyCharm/repo/fedora-{{ hostvars[inventory_hostname].ansible_distribution_major_version }}/phracek-PyCharm-fedora-{{ hostvars[inventory_hostname].ansible_distribution_major_version }}.repo"
-    dest: /etc/yum.repos.d/_copr_phracek-PyCharm.repo
+- name: Setup VSCodium repo
+  copy:
+    src: vscodium.repo
+    dest: /etc/yum.repos.d/vscodium.repo
     owner: root
     group: root
+    mode: 0644
 
-- name: Install Pycharm
+- name: Install VSCodium
   dnf:
-    name: pycharm-community
-    state: present
-
-- name: Install Atom repo key
-  rpm_key:
-    key: "https://packagecloud.io/AtomEditor/atom/gpgkey"
-    state: present
-- name: Install Atom repository
-  copy:
-    content: "[Atom]\nname=Atom Editor\nbaseurl=https://packagecloud.io/AtomEditor/atom/el/7/\$basearch\nenabled=1\ngpgcheck=0\nrepo_gpgcheck=1\ngpgkey=https://packagecloud.io/AtomEditor/atom/gpgkey"
-    dest: /etc/yum.repos.d/atom.repo
-- name: Install Atom
-  dnf:
-    name: atom
-    state: present
-
-- name: Install android tools
-  dnf:
-    name:
-      - android-tools
-      - adb
-    state: present
+    name: codium
