--- a/roles/prerequisites/tasks/main.yml
+++ b/roles/prerequisites/tasks/main.yml
@@ -6,7 +6,10 @@
 
 - name: Install prerequisites from repository
   dnf:
-    name: python-libselinux
+    name:
+      - python3-libselinux
+      - python3-libsemanage
+      - python3-policycoreutils
     state: present
 
 - name: Install prerequisites from pypi
